# python-matlab-bridge

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README  README.markdown  README.md  THANKS  THANKS.md  config.ini  index.html  local.cfg  make.py  matlab.py  matlab_magic.ipynb  params.json  pymatbridge.ipynb  requirements.txt  setup.cfg  setup.py  test.m  test.py  test_requirements.txt  type.py  version.py
conda_recipe/: build.sh  meta.yaml
conda_recipe/osx-64/: build.sh  build_messenger.py  meta.yaml
djmatlab/: README  __init__.py  pymatlab.py
docs/: Makefile  README.rst  conf.py  index.rst  make.bat
docs/api/: messenger.rst
logs/: matlablog_python-matlab-bridge.txt
matlab/: startup.m
matlab/functions/: make_bin_http_header.m  text2header.m
matlab/www/: index.html  test_connect.m
messenger/: __init__.py  __main__.py  get_messenger_dir.py  make.py  make_octave.py  settings.py
messenger/mexa64/: local.cfg  local_octave.cfg  make.py  messenger.mex  messenger.mexa64  messenger.oct
messenger/mexmaci64/: local.cfg  local_octave.cfg  make.py  messenger.mex  messenger.mexmaci64  messenger.mexmaci64.zmq3
messenger/mexw32/: local.cfg
messenger/mexw64/: local.cfg  local_octave.cfg  messenger.mex  messenger.mexw64  messenger.oct
messenger/octave/: Makefile  make.py  messenger.mex
messenger/osx-64/: local.cfg  make.py
messenger/src/: messenger.c
messenger/tests/: test_env.py
pymatbridge/: __init__.py  __version__.py  compat.py  matlab_magic.py  publish.py  pymatbridge.py  version.py
pymatbridge/examples/: example_func.m  example_script.m  matlab_magic.ipynb  outvariables.py  pymatbridge.ipynb
pymatbridge/logs/: bashlog_python-matlab-bridge.txt  matlablog_python-matlab-bridge.txt
pymatbridge/matlab/: matlabserver.m  startup.m  (+1 more)
pymatbridge_zmq/: Makefile  README  example.ipynb  messenger.c  pymatbridge.py
scripts/: publish-notebook
tools/: github_stats.py
(+147 files in other folders)
