[global]
verbose=1

[build_ext]
inplace=1

[bdist_wheel]
universal = 1

[metadata]
summary = pymatbridge: A python interface to call out to Matlab(R)
license = BSD
scripts = scripts/publish-notebook
download_url = https://github.com/arokem/python-matlab-bridge/archive/master.tar.gz
long_description =
    README.md
    LICENSE
description-file =
    README.md
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
