[global]
verbose=1

[build_ext]
inplace=1

[bdist_wheel]
universal = 0

[metadata]
summary = pymatbridge: A python interface to call out to Matlab(R)
license = BSD
scripts = scripts/publish-notebook
download_url = https://github.com/arokem/python-matlab-bridge/archive/master.tar.gz
long_description =
    README.md
    LICENSE
description-file =
    README.md
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools'
    Intended Audience :: Developers'
    Programming Language :: Python :: 2'
    Programming Language :: Python :: 2.7'
    Programming Language :: Python :: 3'
    Programming Language :: Python :: 3.3'
    Programming Language :: Python :: 3.4'
    Programming Language :: Other Scripting Engines
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research

keywords = matlab python packaging

